# chessfr

./: .gitignore  LICENSE  README.md  build_log.txt  build_log_3.txt  build_log_4.txt  build_log_utf8.txt  err.txt  out.txt
.github/workflows/: build_apk.yml  ci.yml  deploy.yml  deploy.yml.bak
backend/: .env.example  README.md
backend/crawler/: .env.example  interactive_selector.py  main.py  pyproject.toml
backend/crawler/services/: chess_api.py  pattern_engine.py  robots_checker.py
backend/supabase/migrations/: 001_initial_schema.sql  002_create_vision_tables.sql  002_positions_insert_policy.sql  002_profile_customization.sql  003_leaderboard_and_constraints.sql  004_community_social_hub.sql  005_robust_username_system.sql  006_concierge_and_hall_of_fame.sql
data/: sample_move_payload.json
docs/: AGENT_HANDOFF.md  DANKFISH_PROFILE_SYSTEM.md  DATA_MODEL.md  FIREBASE_SETUP.md  FUTURE_FEATURES.md  LOGO_DESIGN.md  PROJECT_OVERVIEW.md  PROTOCOL_AND_STATUS.md  REVENUE_STRATEGIES.md  SECURITY_AND_FAIR_PLAY.md  TASKS_PUBLIC_AND_BRANDING.md  TRAINING_LOOP.md
flutter/: README.md  analysis.txt  analysis_debug.txt  analysis_errors.2.txt  analysis_errors.3.txt  analysis_errors.4.txt  analysis_errors.txt  analyze_output_2.txt  deps.txt  final_analyze_check.txt  final_check.txt  final_verify.txt  issues.txt  pubspec.yaml
flutter/android/: build.gradle.kts  settings.gradle.kts
flutter/android/app/: build.gradle.kts  google-services.json
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/test/: chess_api_test.dart  widget_test.dart
tests/: README.md
(+52 files in other folders)
